--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "client-demo",
+  "name": "client",
   "version": "0.0.1",
   "author": "wudong <511970747@qq.com>",
   "description": "An electron-vue project",
@@ -19,7 +19,7 @@
     "postinstall": "npm run lint:fix"
   },
   "build": {
-    "productName": "client-demo",
+    "productName": "风电场优化软件",
     "appId": "com.cn.clien.demo",
     "directories": {
       "output": "build"
@@ -141,5 +141,13 @@
     "webpack-dev-server": "^3.1.4",
     "webpack-hot-middleware": "^2.22.2",
     "webpack-merge": "^4.1.3"
+  },
+  "prettier": {
+    "singleQuote": true,
+    "semi": true,
+    "stylelintIntegration": true,
+    "eslintIntegration": true,
+    "trailingComma": "all",
+    "htmlWhitespaceSensitivity": "ignore"
   }
 }
